# Mocap-studio-Chinese

./: .gitignore  README.md  pyproject.toml
docs/: blender_art_export.md  body_classification.md  improvement_plan_4points.md  literature_and_research_features.md  opera_metrics.md  touchdesigner_export.md  viewer_improvement_plan.md
examples/: ai_motion_demo.py  blender_rig_demo.py  td_particles_demo.py
mocap studio/: README.md  requirements.txt  run_mocap_gui.pyw  sample_mocap_mocap_analysis.json  sample_mocap_mocap_timeseries.csv  test_bvh.py  test_video_pose.py  启动动捕界面.bat  启动艺术Demo.bat
mocap studio/opera_mocap_tool/: README.md  analyzer.py  config.py  export.py  gui.py  plotting.py
opera_mocap_tool/: __init__.py  __main__.py  analyzer.py  cli.py  export.py  gui.py  mixamo_retarget.py  skeleton.py  viewer.py  viewer_3d.py
opera_mocap_tool/analysis/: __init__.py  audio_sync.py  balance.py  batch_process.py  dang_classifier.py  dtw_enhanced.py  frequency.py  kinematic.py  laban_approx.py  reference_compare.py  rhythm_enhanced.py  td_export_enhanced.py  yunshou_art_mapping.py  yunshou_features.py  yunshou_visualization.py
opera_mocap_tool/commercial/: __init__.py  ai_motion.py  blender_rig.py  td_particles.py
opera_mocap_tool/docs/: yunshou_touchdesigner_guide.md
opera_mocap_tool/io/: __init__.py  c3d_reader.py  loaders.py  yunshou_references.py
opera_mocap_tool/preprocessing/: interpolation.py  quality.py
opera_mocap_tool/realtime/: __init__.py  filters.py  pipeline.py  (+4 more)
tests/: __init__.py  test_ai_motion.py  test_blender_rig.py  test_td_particles.py
(+24 files in other folders)
