[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jingju-audio-tool"
version = "0.1.0"
description = "京剧音频分析工具，用于数字艺术创作（导出 JSON/CSV 供 TouchDesigner、Max、Blender 等使用）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "praat-parselmouth>=0.4.0",
    "click>=8.0.0",
    "av>=10.0.0",
    "matplotlib>=3.6.0",
    "scipy>=1.10.0",
    "c3d>=0.5.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.scripts]
jingju-analyze = "jingju_audio_tool.cli:main"
opera-mocap-analyze = "opera_mocap_tool.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jingju_audio_tool*", "opera_mocap_tool*"]
